Fix: fix style.scss unseen class visibllity to display

--- a/public/CSS/style.scss
+++ b/public/CSS/style.scss
@@ -1,5 +1,5 @@
 .unseen {
-	visibility: hidden;
+	display: none;
 }
 .user {
 	margin-top: 1rem;
